--- a/web/pom.xml
+++ b/web/pom.xml
@@ -95,20 +95,20 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
 				<executions>
-					<execution>
-						<id>exec-npm-install</id>   <!-- 名字可以随便定义建议见名知意 -->
+					<!--<execution>
+						<id>exec-npm-install</id>   &lt;!&ndash; 名字可以随便定义建议见名知意 &ndash;&gt;
 						<phase>prepare-package</phase>
 						<goals>
 							<goal>exec</goal>
 						</goals>
 						<configuration>
-							<executable>npm</executable>  <!-- 执行命令 -->
+							<executable>npm</executable>  &lt;!&ndash; 执行命令 &ndash;&gt;
 							<arguments>
-								<argument>install</argument>  <!-- 参数 -->
+								<argument>install</argument>  &lt;!&ndash; 参数 &ndash;&gt;
 							</arguments>
-							<workingDirectory>${basedir}/src/main/webapp</workingDirectory> <!-- 前端工作目录 -->
+							<workingDirectory>${basedir}/src/main/webapp</workingDirectory> &lt;!&ndash; 前端工作目录 &ndash;&gt;
 						</configuration>
-					</execution>
+					</execution>-->
 
 					<execution>
 						<id>exec-npm-run-build</id>  <!-- 名字可以随便定义建议见名知意 -->
