--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -22,6 +22,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=org.spmul.entity
 mybatis.configuration.mapUnderscoreToCamelCase=true
+
+#logger
+logging.level.org.spmul.dao:DEBUG
+
 ##redis
 
 # Redis数据库索引（默认为0）
