--- a/web/pom.xml
+++ b/web/pom.xml
@@ -91,12 +91,27 @@
 				</executions>
 			</plugin>
 
-			<plugin>
+			<!--<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
 				<executions>
-					<!--<execution>
-						<id>exec-npm-install</id>   &lt;!&ndash; 名字可以随便定义建议见名知意 &ndash;&gt;
+					<execution>
+						<id>exec-npm-install</id>   &lt;!&ndash; 名字可以随便定义建议见名知意
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>npm</executable>   执行命令
+							<arguments>
+								<argument>install</argument>   参数
+							</arguments>
+							<workingDirectory>${basedir}/src/main/webapp</workingDirectory>  前端工作目录
+						</configuration>
+					</execution>&ndash;&gt;
+
+					<execution>
+						<id>exec-npm-run-build</id>  &lt;!&ndash; 名字可以随便定义建议见名知意 &ndash;&gt;
 						<phase>prepare-package</phase>
 						<goals>
 							<goal>exec</goal>
@@ -104,30 +119,15 @@
 						<configuration>
 							<executable>npm</executable>  &lt;!&ndash; 执行命令 &ndash;&gt;
 							<arguments>
-								<argument>install</argument>  &lt;!&ndash; 参数 &ndash;&gt;
-							</arguments>
-							<workingDirectory>${basedir}/src/main/webapp</workingDirectory> &lt;!&ndash; 前端工作目录 &ndash;&gt;
-						</configuration>
-					</execution>-->
-
-					<execution>
-						<id>exec-npm-run-build</id>  <!-- 名字可以随便定义建议见名知意 -->
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>exec</goal>
-						</goals>
-						<configuration>
-							<executable>npm</executable>  <!-- 执行命令 -->
-							<arguments>
 								<argument>run</argument>
-								<argument>build:prod</argument>  <!-- 参数: prod -->
+								<argument>build:prod</argument>  &lt;!&ndash; 参数: prod &ndash;&gt;
 							</arguments>
 							<workingDirectory>${basedir}/src/main/webapp</workingDirectory>
 						</configuration>
 					</execution>
 
 				</executions>
-			</plugin>
+			</plugin>-->
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
