修復BUG，以及更新。

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -22,6 +22,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=org.spmul.entity
 mybatis.configuration.mapUnderscoreToCamelCase=true
+# 关闭二级缓存
+mybatis.configuration.cache-enabled=false
+# 一级缓存（本地缓存）范围 session:就会有数据的共享 statement:语句范围 (这样就不会有数据的共享 ) 注意：一级缓存无法关闭
+mybatis.configuration.local-cache-scope=statement
 
 #logger
 logging.level.org.spmul.dao:DEBUG
