--- a/web/src/main/webapp/package.json
+++ b/web/src/main/webapp/package.json
@@ -43,7 +43,7 @@
     "url": "https://github.com/PanJiaChen/vue-element-admin/issues"
   },
   "dependencies": {
-    "axios": "0.18.0",
+    "axios": "^0.19.0",
     "clipboard": "2.0.4",
     "codemirror": "5.45.0",
     "driver.js": "0.9.5",
@@ -69,7 +69,8 @@
     "vue-splitpane": "1.0.4",
     "vuedraggable": "2.20.0",
     "vuex": "3.1.0",
-    "xlsx": "0.14.1"
+    "xlsx": "0.14.1",
+    "xlsx-style": "^0.8.13"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
