完善功能模块

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<module>shiro</module>
 		<module>redis</module>
 		<module>common</module>
+		<module>ws</module>
 	</modules>
 
 	<properties>
