整合代码逆向生成插件mybatis-generator，文档生成器swagger2

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<module>redis</module>
 		<module>common</module>
 		<module>ws</module>
+		<module>swagger</module>
 	</modules>
 
 	<properties>
